--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
+/node_modules
 .DS_Store
+static/css/aliases.styl
+static/css/box.styl
+static/css/buttons.styl
+static/css/clearfix.styl
+static/css/color-image.styl
+static/css/config.styl
+static/css/ellipsis.styl
+static/css/gradients.styl
+static/css/hide-text.styl
+static/css/iconic.styl
+static/css/nib-index.styl
+static/css/nib-text.styl
+static/css/overflow.styl
+static/css/positions.styl
+static/css/reset.styl
+static/css/text/
+static/css/vendor.styl
